{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 18,
  "lineage": "cbea739b-e43c-2c7b-9e12-fb95b7f1e90e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "dev_default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_network_acl_id": "acl-0240af4f88d5c2c9b",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0240af4f88d5c2c9b",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "715652651898",
            "subnet_ids": [
              "subnet-07d581f8d578d2253",
              "subnet-0de10842c96d32ec7"
            ],
            "tags": {
              "Name": "user04-final-dev-default"
            },
            "vpc_id": "vpc-0556049bd5f8fd1c5"
          },
          "depends_on": [
            "aws_subnet.subnet-a",
            "aws_subnet.subnet-b",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "dev_default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:715652651898:security-group/sg-069834b91fec8e1b2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-069834b91fec8e1b2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "owner_id": "715652651898",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "user04-final-dev-default"
            },
            "timeouts": null,
            "vpc_id": "vpc-0556049bd5f8fd1c5"
          },
          "depends_on": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-05b5f4f62415d3918",
            "domain": "vpc",
            "id": "eipalloc-037cd954376680380",
            "instance": "i-0bd4c288fb5362971",
            "network_interface": "eni-07f4ac72ca2007e8b",
            "private_dns": "ip-104-0-1-11.ap-northeast-1.compute.internal",
            "private_ip": "104.0.1.11",
            "public_dns": "ec2-52-193-47-250.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.193.47.250",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_instance.bastion_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-4af5022c",
            "arn": "arn:aws:ec2:ap-northeast-1:715652651898:instance/i-0bd4c288fb5362971",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0bd4c288fb5362971",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "user04-final-dev",
            "monitoring": false,
            "primary_network_interface_id": "eni-07f4ac72ca2007e8b",
            "private_dns": "ip-104-0-1-11.ap-northeast-1.compute.internal",
            "private_ip": "104.0.1.11",
            "public_dns": "ec2-13-231-237-71.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.231.237.71",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0cc9035336124c74e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0de10842c96d32ec7",
            "tags": {
              "Name": "user04-final-bastion-a"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-069834b91fec8e1b2",
              "sg-0b3701790e0d6f928"
            ]
          },
          "depends_on": [
            "aws_default_security_group.dev_default",
            "aws_security_group.bastion",
            "aws_subnet.subnet-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-039110be3ed746bf7",
            "owner_id": "715652651898",
            "tags": {
              "Name": "user04-final-IG"
            },
            "vpc_id": "vpc-0556049bd5f8fd1c5"
          },
          "depends_on": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-073cb05a1a20f0391",
            "owner_id": "715652651898",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-039110be3ed746bf7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "user04-final-dev-public"
            },
            "vpc_id": "vpc-0556049bd5f8fd1c5"
          },
          "depends_on": [
            "aws_internet_gateway.dev",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_subnet-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07716e785c6260764",
            "route_table_id": "rtb-073cb05a1a20f0391",
            "subnet_id": "subnet-0de10842c96d32ec7"
          },
          "depends_on": [
            "aws_route_table.dev_public",
            "aws_subnet.subnet-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_subnet-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca8453b03b11f187",
            "route_table_id": "rtb-073cb05a1a20f0391",
            "subnet_id": "subnet-07d581f8d578d2253"
          },
          "depends_on": [
            "aws_route_table.dev_public",
            "aws_subnet.subnet-b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:715652651898:security-group/sg-0b3701790e0d6f928",
            "description": "open ssh port for bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b3701790e0d6f928",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion",
            "name_prefix": null,
            "owner_id": "715652651898",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "user04-final-bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-0556049bd5f8fd1c5"
          },
          "depends_on": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:715652651898:subnet/subnet-0de10842c96d32ec7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "104.0.1.0/24",
            "id": "subnet-0de10842c96d32ec7",
            "map_public_ip_on_launch": false,
            "owner_id": "715652651898",
            "tags": {
              "Name": "user04-final-subnet-a"
            },
            "vpc_id": "vpc-0556049bd5f8fd1c5"
          },
          "depends_on": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:715652651898:subnet/subnet-07d581f8d578d2253",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "104.0.2.0/24",
            "id": "subnet-07d581f8d578d2253",
            "map_public_ip_on_launch": false,
            "owner_id": "715652651898",
            "tags": {
              "Name": "user04-final-subnet-b"
            },
            "vpc_id": "vpc-0556049bd5f8fd1c5"
          },
          "depends_on": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:715652651898:vpc/vpc-0556049bd5f8fd1c5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "104.0.0.0/16",
            "default_network_acl_id": "acl-0240af4f88d5c2c9b",
            "default_route_table_id": "rtb-09c4ff00777ebee62",
            "default_security_group_id": "sg-069834b91fec8e1b2",
            "dhcp_options_id": "dopt-0d9c2be86ee4efa1b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0556049bd5f8fd1c5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09c4ff00777ebee62",
            "owner_id": "715652651898",
            "tags": {
              "Name": "user04-final-vpc"
            }
          }
        }
      ]
    }
  ]
}